--- a/index.html
+++ b/index.html
@@ -9,23 +9,25 @@
   <div class="container">
     <div class="header clearfix">
       <div id="happy-face">
-        <div id="mad-libs-logo"> </div>
+        <div id="mad-libs-logo"></div>
       </div>
     </div>
-    <div class="jumbotron  clearfix">
-      <h1>Provide the following words:</h1>
-      <div class="form-inline">
-        <input class="form-control input-sm" ng-init="male_name='{{male_name}}'" ng-model="male_name" />
-        <input class="form-control input-sm" ng-init="job_title='{{job_title}}'" ng-model="job_title" />
-        <input class="form-control input-sm" ng-init="female_name='{{female_name}}'" ng-model="female_name" />
-        <input class="form-control input-sm" ng-init="tedious_task='{{tedious_task}}'" ng-model="tedious_task" />
-        <input class="form-control input-sm" ng-init="alias_name='{{alias_name}'" ng-model="alias_name" />
-        <input class="form-control input-sm" ng-init="times_faster='{{times_faster}'" ng-model="times_faster" />
-        <!--<p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>-->
+    <div ng-controller="MadLibsController">
+      <div class="jumbotron  clearfix">
+        <h1>Provide the following words:</h1>
+        <div class="form-inline">
+          <input class="form-control input-sm" ng-model="male_name" />
+          <input class="form-control input-sm" ng-model="job_title" />
+          <input class="form-control input-sm" ng-model="female_name" />
+          <input class="form-control input-sm" ng-model="useless_skill" />
+          <input class="form-control input-sm" ng-model="tedious_task" />
+          <input class="form-control input-sm" ng-model="robot_name" />
+          <input class="form-control input-sm" ng-model="times_faster" />
+        </div>
       </div>
-    </div>
-    <div class="row marketing">
-      <p>{{ male_name }} was a was a {{ job_title }} who loved technology. Although she loved parts of her job, she absolutely hated {{tedious_task}}. So, {{ female_name }} met with her life mentor [celebrity] who told her to learn how to [useless skill] with Thinkful. Thinkful didn't offer a course on [seless skill]so she studied programming instead. What a great decision! With her new skills, {{ female_name }} built a(n)robot named, {{ alias_name }}, that not only loved {{tedious_task}} but did it {{ times_faster }} times faster.</p>
+      <div class="row marketing">
+        <p>{{ male_name }} was a was a {{ job_title }} who loved technology. Although she loved parts of her job, she absolutely hated {{tedious_task}}. So, {{ female_name }} met with her mentor who told her to learn how to {{ useless_skill }}  with Thinkful. Thinkful didn't offer a course on {{ useless_skill }} so she studied programming instead. What a great decision! With her new skills, {{ female_name }} built a robot named, {{ robot_name }}, that not only loved {{tedious_task}} but did it {{ times_faster }} times faster.</p>
+      </div>
     </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js" type="text/javascript"></script>
